NSEC2020 - Mastering Container Security course firstday, end first day

--- a/Conferences/NSEC2020/Course - Mastering Container Security/_notes_2020-05-12.md
+++ b/Conferences/NSEC2020/Course - Mastering Container Security/_notes_2020-05-12.md
@@ -1,5 +1,20 @@
-Rory McNune NCC group
 
+Rory McCune NCC group
+Participants
+	Alexis-Maurer Fortin
+	Guillaume Ross
+	Iain Smart
+	Olivier Gauthier
+	Mark Cohen
+	Jamal H
+	Rob Widham
+	Johanna
+	David SavardBlackburn
+	David Pokora
+	Geoff Nope
+	Didier T. Vezina
+	Desiree McCarthy
+	Arthurs S
 
 # Default files imported back from a customer will preserve identity. Such as root will be preserve
 
@@ -194,3 +209,155 @@ Should check for CAP_SYS_ADMIN capability
   [ip-172-27-10-40 scratch-container ]$ filecap /usr/                                                                                                            │Should check for CAP_SYS_ADMIN capability  
   file                 capabilities                                                                                                                              │
   /usr/bin/mtr-packet     net_raw      
+
+
+!!!!no-new-privileges
+    Free hardening feature, switch set at the daemon level.
+
+## Setting performance limits
+docker run --cpus0.5 (half a core)
+
+Docker susceptible to a fork bomb (running out of process ID). Unsecure by default
+--pids-limit 10 (Pretty safe value by default)
+
+Debian :App Armor
+SELinux
+
+# Verify if apparmor is disabled
+sudo apparmor_status
+	2 processes are in enforce mode.                                                                                                                               │Debian :App Armor
+	   docker-default (30566)                                                                                                                                      │SELinux
+	   docker-default (30605) 
+
+
+seccomp profiles can allow a whitelist of syscalls to be allowed. Not recommended except for very specific usage.
+
+Docker inspect won't show seccomp.
+Should show "seccomp=unconfined" under "SecurityOpt" if it's disabled
+## Kubernetes turns off any seccomp enable containers.
+docker info | grep apparmor 
+	
+
+
+## Docker forensics/Reversing
+Delta of changes :
+  docker run --name hist -it alpine /bin/ash
+  mkdir test && touch /test/Lorem
+  exit
+  docker container diff hist
+  docker container commit hist history_test
+  docker image history history_test
+
+Reversing and finding secrets with 
+Whaler https://github.com/P3GLEG/Whaler
+https://github.com/wagoodman/dive
+
+
+
+## Man-in-the-middle docker client via socket
+   Exercise - Using Socat to see traffic to the Docker socket
+	sudo socat -v UNIX-LISTEN:/tmp/tempdock.sock,fork UNIX-CONNECT:/var/run/docker.sock
+	In another shell
+	sudo docker -H unix:///tmp/tempdock.sock images
+
+!!!! --privileged flag can be use to get rights to the underlying host
+
+
+
+Kubectl needs --privileged
+
+Exercise - "The most pointless Docker command ever"
+
+Useful for a docker access on a host.
+
+
+Falco sysdig
+
+Reviewing docker security Docker bench CIS Benchmark
+
+
+
+docker run -it --net host --pid host --cap-add audit_control \
+-e DOCKER_CONTENT_TRUST=$DOCKER_CONTENT_TRUST \
+-v /var/lib:/var/lib -v /var/run/docker.sock:/var/run/docker.sock -v /usr/lib/systemd:/usr/lib/systemd \
+-v /etc:/etc --label docker_bench_security \
+docker/docker-bench-security
+
+
+Things to look for - 4
+Things to look for - 5
+
+## What to look for 
+1. Search for non registry containers
+2. Dockers running dangerously? 
+   Docker socket is mounted?
+
+
+## Container Vuln Scanning
+Less coverage with
+
+
+## Vulnerability scanner/auditing
+Use Clair-scanner
+ 
+
+## Docker Builder Security
+Docker Builder security runs as root. Carefull which machine runs it.
+
+## AmI In a controller
+/.dockerenv  => 0 bytes
+PID 1 is not init
+
+
+## Troubleshooting a container
+Run the container mapping the namespace of the host to the container
+
+
+
+    docker swarm join --token SWMTKN-1-548r07f1dovnzh6oxz476h0xm3bjl808jaicia5yy3ry4elclv-etmmti45dknjztmih9oqciypb 172.17.0.5:2377 
+
+
+
+## Kubernetes 
+overlay network are turned off by default per performance reason
+
+
+## Secrets management
+swarm autolock requires keyboard input at boot to decrypt the DB.
+
+swarm does not support capabilities restriction
+
+Threat model :
+	Master node access, full cluster control
+
+Overlay network :
+ 	flat
+
+uses port 2377
+
+
+## Alternative runtimes
+gVisor instead of runc
+
+
+pscap
+
+k8s release cycle every 3 months and support p;rev 2 releases (9 months cycle total)
+
+
+# Kubernetes
+## Attack surface
+API Server
+  443/TCP usually
+  6443/TCP
+  8443/TCP
+
+Scheduler
+  10251/TCP
+
+Controller Manager
+  10252/TCP
+
+etcd
+  2379/TCP  
+  2380/TCP
